<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context="com.example.android.justjava.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#01579B"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/type"
                style="@style/HeaderTextStyle"
                android:padding="8dp"
                android:text="@string/type" />

            <TextView
                android:id="@+id/quantity"
                style="@style/HeaderTextStyle"
                android:layout_alignParentRight="true"
                android:padding="8dp"
                android:text="@string/quantity" />

        </RelativeLayout>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tfname"
            android:inputType="textCapWords"
            android:padding="8dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/late"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:text="@string/late"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/minusLate"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/quantity_text_view_late"
                android:onClick="decrementLate"
                android:padding="8dp"
                android:text="-"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/quantity_text_view_late"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/plusLate"
                android:layout_toStartOf="@+id/plusLate"
                android:padding="8dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/plusLate"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:onClick="incrementLate"
                android:padding="8dp"
                android:text="+"
                android:textAllCaps="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/moca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:text="@string/moca"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/minusMoca"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/quantity_text_view_moca"
                android:onClick="decrementMoca"
                android:padding="8dp"
                android:text="-"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/quantity_text_view_moca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/plusMoca"
                android:padding="8dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/plusMoca"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:onClick="incrementMoca"
                android:padding="8dp"
                android:text="+"
                android:textAllCaps="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cappuccino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/quantity_text_view_cappuccino"
                android:layout_alignBottom="@+id/quantity_text_view_cappuccino"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="8dp"
                android:text="@string/capuccino"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/minusCappuccino"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/quantity_text_view_cappuccino"
                android:onClick="decrementCappuccino"
                android:padding="8dp"
                android:text="-"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/quantity_text_view_cappuccino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/plusCappuccino"
                android:padding="8dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/plusCappuccino"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:onClick="incrementCappuccino"
                android:padding="8dp"
                android:text="+"
                android:textAllCaps="true" />

        </RelativeLayout>


        <TextView
            style="@style/HeaderTextStyle"
            android:padding="8dp"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/whippedCream" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/chocolate" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="submitOrder"
            android:padding="8dp"
            android:text="@string/order"
            android:textAllCaps="true" />

    </LinearLayout>


</ScrollView>


